put css in line with html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="utf-8">
   <title>NYT Demo: Kev, Mih, Dav</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <style>
+    #containerCSS {
+      margin: 5px;
+    }
+  </style>
 
 </head>
 
